<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/home_header_height">

    <View
        android:id="@+id/actionBarStub"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_header_action_height"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/second_banner"
        app:layout_constraintBottom_toTopOf="@+id/actionBarStub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_search_height"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@android:drawable/ic_search_category_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_search_hint"
                style="@style/TextOneLine.Medium.Secondary"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@+id/searchIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/sloganTv"
        style="@style/TextHomeSlogan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/motorcycleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <ImageButton
        android:id="@+id/newCarsBtn"
        style="@style/ImageButtonStyle"
        android:layout_width="@dimen/home_header_action_btn_size"
        android:layout_height="@dimen/home_header_action_btn_size"
        android:layout_marginEnd="@dimen/home_header_action_btn_margin"
        android:background="@drawable/new_cars_btn_bg"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <ImageButton
        android:id="@+id/usedCarsBtn"
        style="@style/ImageButtonStyle"
        android:layout_width="@dimen/home_header_action_btn_size"
        android:layout_height="@dimen/home_header_action_btn_size"
        android:layout_marginTop="@dimen/home_header_action_btn_margin"
        android:background="@drawable/used_cars_btn_bg"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@id/motorcycleBtn" />

    <ImageButton
        android:id="@+id/motorcycleBtn"
        style="@style/ImageButtonStyle"
        android:layout_width="@dimen/home_header_action_btn_size"
        android:layout_height="@dimen/home_header_action_btn_size"
        android:layout_marginBottom="@dimen/home_header_action_btn_margin"
        android:background="@drawable/motor_cycle_btn_bg"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo" />

    <ImageButton
        android:id="@+id/articlesBtn"
        style="@style/ImageButtonStyle"
        android:layout_width="@dimen/home_header_action_btn_size"
        android:layout_height="@dimen/home_header_action_btn_size"
        android:background="@drawable/articles_btn_bg"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@id/usedCarsBtn" />

    <ImageButton
        android:id="@+id/moreBtn"
        style="@style/ImageButtonStyle"
        android:layout_width="@dimen/home_header_action_btn_size"
        android:layout_height="@dimen/home_header_action_btn_size"
        android:layout_marginStart="@dimen/home_header_action_btn_margin"
        android:background="@drawable/more_btn_bg"
        android:scaleType="centerInside"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/newCarsBtn" />


    <TextView
        android:id="@+id/newCarsBtnTV"
        style="@style/TextOneLine.Small.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_cars"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/newCarsBtn"
        app:layout_constraintStart_toStartOf="@+id/newCarsBtn"
        app:layout_constraintTop_toBottomOf="@+id/newCarsBtn" />

    <TextView
        android:id="@+id/moreBtnTV"
        style="@style/TextOneLine.Small.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/moreBtn"
        app:layout_constraintStart_toStartOf="@+id/moreBtn"
        app:layout_constraintTop_toBottomOf="@+id/moreBtn" />

    <TextView
        android:id="@+id/usedCarsBtnTV"
        style="@style/TextOneLine.Small.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/used_cars"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/usedCarsBtn"
        app:layout_constraintStart_toStartOf="@+id/usedCarsBtn"
        app:layout_constraintTop_toBottomOf="@+id/usedCarsBtn" />

    <TextView
        android:id="@+id/motorcycleBtnTV"
        style="@style/TextOneLine.Small.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motorcycle"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/motorcycleBtn"
        app:layout_constraintStart_toStartOf="@+id/motorcycleBtn"
        app:layout_constraintTop_toBottomOf="@+id/motorcycleBtn" />

    <TextView
        android:id="@+id/articlesBtnTV"
        style="@style/TextOneLine.Small.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articles"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/articlesBtn"
        app:layout_constraintStart_toStartOf="@+id/articlesBtn"
        app:layout_constraintTop_toBottomOf="@+id/articlesBtn" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/home_logo_size"
        android:layout_height="@dimen/home_logo_size"
        android:layout_marginBottom="4dp"
        android:src="@drawable/new_cars_btn_bg"
        app:layout_constraintBottom_toTopOf="@+id/actionBtnNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/actionBtnNames"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="2dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/newCarsTV"
            style="@style/TextOneLine.Small.Primary"
            android:layout_width="@dimen/home_header_action_btn_size"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/new_cars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/usedCarsTV"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usedCarsTV"
            style="@style/TextOneLine.Small.Primary"
            android:layout_width="@dimen/home_header_action_btn_size"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/used_cars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/motorcycleTV"
            app:layout_constraintStart_toEndOf="@+id/newCarsTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/motorcycleTV"
            style="@style/TextOneLine.Small.Primary"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/motorcycle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/articlesTV"
            app:layout_constraintStart_toEndOf="@+id/usedCarsTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/articlesTV"
            style="@style/TextOneLine.Small.Primary"
            android:layout_width="@dimen/home_header_action_btn_size"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/articles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/moreTV"
            app:layout_constraintStart_toEndOf="@id/motorcycleTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moreTV"
            style="@style/TextOneLine.Small.Primary"
            android:layout_width="@dimen/home_header_action_btn_size"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/more"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/articlesTV"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarView"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

</android.support.constraint.ConstraintLayout>